@@ -2,6 +2,7 @@
 - Enhancements
 Include symfony framework
 Ability to request holiday in days (optionnal)
+Add a 2nd notifications workflow
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
